--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "npx playwright test",
-    "test:headed": "npx playwright test --headed",
+    "scraping": "npx playwright test",
     "test:forex": "npx playwright test src/tests/forex-factory.spec.ts",
     "install:browsers": "npx playwright install"
   },
@@ -18,5 +17,8 @@
     "@types/node": "^24.0.3",
     "eslint-plugin-playwright": "^2.2.0",
     "prettier": "3.5.3"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.13"
   }
 }
