--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
-      "@/src/*": ["./src/*"]
+      "@/*": ["./src/*"]
     },
     "types": ["node", "@playwright/test"]
   },
